<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFC845"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/animal"/>
    <EditText
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/in_id"
        android:background="@drawable/edit_radius"/>
    <EditText
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/in_pass"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:background="@drawable/edit_radius"/>
    <TextView
        android:id="@+id/textv"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:text="@string/btn_1"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_radius"/>
    <Button
        android:id="@+id/btn_join"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange"
        android:text="@string/find_id"/>
    <Button
        android:id="@+id/btn_find"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange"
        android:text="@string/find_pass"/>
</LinearLayout>
