<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFC845"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/pet_name"
        android:textStyle="bold"
        android:background="@drawable/edit_radius"/>
    <EditText
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/in_id"
        android:textStyle="bold"
        android:background="@drawable/edit_radius"/>
    <EditText
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/in_pass"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:background="@drawable/edit_radius"/>
    <EditText
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/in_email"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:background="@drawable/edit_radius"/>
    <Button
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/join"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@drawable/btn_radius"/>

</LinearLayout>